# Odometrie

./: .gitignore
ArUCO/: .gitignore  CMakeLists.txt  main.cpp
ArUCO/Old_Data/: config.yml
ArUCO/data/: camera_params.yml  config.yml  lib_params.yml
ArUCO/includes/: calculsfct.h  calibration.h  camera.h  estimation.h  tags.h  tests.h
ArUCO/src/: autrecode.cpp  calculsfct.cpp  calibration.cpp  camera.cpp  estimation.cpp  main.cpp  tests.cpp
MPU6050_gyro/: README.md
MPU6050_gyro/GYRO_ACC_Yann/: .cproject  .mxproject  .project  GYRO_ACC_Yann Debug.launch  GYRO_ACC_Yann.ioc
MPU6050_gyro/GYRO_ACC_Yann/Core/Inc/: Accelero.h  MPU6050.h  main.h
MPU6050_gyro/GYRO_ACC_Yann/Core/Src/: Accelero.c  Gyro.c  MPU6050.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
MPU6050_gyro/GYRO_ACC_Yann/Debug/: GYRO_ACC_Yann.elf  GYRO_ACC_Yann.list  GYRO_ACC_Yann.map  makefile  objects.list
NeoPMW/: .cproject  .mxproject  .project  NeoPMW Debug.launch  NeoPMW.ioc
NeoPMW/Core/Inc/: can.h  defineCan.h
NeoPMW/Core/Src/: main.c  stm32l4xx_hal_msp.c
NeoPMW/Debug/: NeoPMW.list  NeoPMW.map  makefile  objects.list
NeoPMW/Debug/Core/Src/: can.d  can.su  main.d  stm32l4xx_hal_msp.su
PMW3091_optique/: .cproject  .mxproject  PMW3091_Bis Debug.launch  PMW3091_Bis.ioc  STM32L432KCUX_FLASH.ld
PMW3091_optique/Core/Inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h  variable.h
PMW3091_optique/Core/Src/: can.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
PMW3091_optique/Debug/: PMW3091_Bis.elf  PMW3091_Bis.list  PMW3091_Bis.map  makefile  objects.list  sources.mk
PMW3091_optique/Debug/Core/Src/: can.d  can.su  main.d  main.su  stm32l4xx_hal_msp.d  stm32l4xx_hal_msp.su  stm32l4xx_it.d  stm32l4xx_it.su  subdir.mk  system_stm32l4xx.d
PMW3091_optique/Debug/PMW3901/: PMW3901.d  PMW3901.su  subdir.mk
PMW3091_optique/PMW3901/: PMW3901.c  PMW3901.h
TOF_1.0/: .cproject  .mxproject  .project  CMakeLists.txt  TOF_1.0.ioc  Tof_test1 Debug (1).launch  Tof_test1 Debug.launch
TOF_1.0/Core/Inc/: can.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
TOF_1.0/Core/Src/: can.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
TOF_1.0/Debug/: Tof_test1.elf  Tof_test1.list  Tof_test1.map  makefile  objects.list
Tof_test/: .cproject  .project  CMakeLists.txt  Tof_test Debug.launch  Tof_test.ioc
Tof_test/Core/Inc/: main.h
Tof_test/Core/Src/: main.c
Tof_test/Core/Startup/: startup_stm32l432kcux.s
Tof_test/Debug/: Tof_test.elf  Tof_test.list  Tof_test.map  makefile  sources.mk
camera_aruco/: .gitignore  CMakeLists.txt  camera_params.yml  detector_params.yml
camera_aruco/data/: camera_params.yml
camera_aruco/include/: estimator.h
camera_aruco/includes/: calibration.h  camera.h  estimation.h
camera_aruco/src/: calibration.cpp  camera.cpp  estimation.cpp  estimator.cpp  main.cpp  serialib.cpp
(+89 files in other folders)
